minio/yaml/single.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: minio
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: minio
  name: minio
  namespace: minio
spec:
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
        - name: minio
          # https://www.cnblogs.com/java365/articles/18922432
          # MinIO社区版在2025-05-24T17-08-30Z这个版本之后，移除了控制台大部分管理功能，想要完整minio，请安装旧版本。
          # https://quay.io/repository/minio/minio?tab=tags&tag=latest 版本
          #image: quay.io/minio/minio:RELEASE.2025-04-22T22-12-26Z
          image: pgsty/minio
          command:
            - /bin/bash
            - -c
          args:
            - minio server /data --console-address :9090
          volumeMounts:
            - mountPath: /data
              name: data
          ports:
            - containerPort: 9090
              name: console
            - containerPort: 9000
              name: api
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: minio-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: minio-service
  namespace: minio
spec:
  type: ClusterIP
  selector:
    app: minio
  ports:
    - name: console
      port: 9090
      protocol: TCP
      targetPort: 9090
    - name: api
      port: 9000
      protocol: TCP
      targetPort: 9000
