minio/yaml/gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: minio-gateway
  namespace: minio
spec:
  gatewayClassName: cilium
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.sumery.com"
      tls:
        mode: Terminate
        certificateRefs:
          - name: minio-tls-secret
      allowedRoutes:
        namespaces:
          from: Same
    - name: http-api
      protocol: HTTP
      port: 9000
      allowedRoutes:
        namespaces:
          from: Same
